# Echo_agentv1-2

./: README.md
Echo_project/Docs/: Proposal.txt  progress_python.md  progress_rust.md  requirments.txt
Echo_project/echo_rust_wrapper/: Cargo.toml
Echo_project/echo_rust_wrapper/src/: main.rs  no_log_wrapper_main.rs
Echo_project/python_wrapper/: Echo_custom.py  Echo_original_loop.py  config.json  echo_pseudo_code.txt  tokenizer_config.json
