[package]
name = "echo_rust_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
dirs = "3"
